Fix z-index of larger video modals

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -58,7 +58,7 @@ figure figcaption ol li {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 300; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
